feat: full rest api
